# escape_into_mountain

./: CMakeLists.txt  README.md  game.cpp  game.h  main.cpp
data/: enemy.cpp  enemy.h  entity.cpp  entity.h  input.h  player.cpp  player.h
data/entity-data/: creatureinfo.csv  enemy_creatureinfo.csv  playerinfo.csv
spotify webapp/: .cache  README.md  dependencies.md  main.py  reviews.json
spotify webapp/static/: nextalbum.js  style.css
spotify webapp/templates/: homepage.html  index.html  results.html
